--- a/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -20,7 +20,7 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    <a href="create">Create A New Page</a>
+                    <a href="{% url 'create' %}">Create A New Page</a>
                 </div>
                 <div>
                     <a href="random_page">Random Page</a>
