--- a/project_2/commerce/auctions/templates/auctions/index.html
+++ b/project_2/commerce/auctions/templates/auctions/index.html
@@ -1,22 +1,67 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+<div>
     <h2>Active Listings</h2>
-    {% for item in items %}
+    
     <div>
         <ul>
-            <li>
-                <h3>Title: {{item.name}}</h3>
-            </li>
-            <p>Description: {{item.description}}</p>
-            <p>Current price: {{bids.}}</p>  <!--AQUI ME QUEDE!!!!!!!!!-->
-            <img src="{{item.image}}" alt="No image to be shown">
-        
-            {% empty %}
-            <h3>No items</h3>
+            {% for item in items %}
+                {% if item.active is True %}
+                    <li>
+                        <a href="listings/{{item.name}}">{{item.name}}</a>
+                    </li>
+                    <p>Description: {{item.description}}</p>
+                    {% for bid in bids %}
+                        {% if bid.bidding_item.name == item.name %}
+                            <p>Current price: {{bid.amount}}</p>
+                        {% else %}
+                        <p>Starting price: {{item.starting_bid}}</p> 
+                        {% endif %}
+                            
+                    {% endfor %}
+                    <img src="{{item.image}}" alt="No image to be shown">
+                {% endif %}
+                    {% empty %}
+                    <h3>No items</h3>
+                
         </ul>
     </div>
+  
     {% endfor %}
+</div>
 
-    TODO
+<div>
+    <h2>Inactive Listings</h2>
+        <div>
+            <ul>
+                {% for item in items %}
+                    {% if item.active is False %}
+                        <li>
+                            <a href="listings/{{item.name}}">{{item.name}}</a>
+                        </li>
+                        <p>Description: {{item.description}}</p>
+                        {% for bid in bids %}
+                            {% if bid.bidding_item.name == item.name %}
+                                <p>Current price: {{bid.amount}}</p>
+                            {% else %}
+                            <p>Starting price: {{item.starting_bid}}</p> 
+                            {% endif %}
+                                
+                        {% endfor %}
+                        <img src="{{item.image}}" alt="No image to be shown">
+                    {% endif %}
+                        {% empty %}
+                        <h3>No items</h3>
+                    
+            </ul>
+        </div>
+    
+    {% endfor %}
+    
+</div>
+<div>
+    <h2>Search by category instead</h2>
+    <a href="/all_categories">Categories</a>
+</div>
 {% endblock %}
